--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "d3": "~3.5.17",
-    "d3-queue": "~2.0.3"
+    "d3-queue": "~2.0.3",
+    "topojson": "~1.6.26"
   }
 }
